🐛Docs scale correctly on mobile devices now

--- a/docs/style.css
+++ b/docs/style.css
@@ -4,8 +4,8 @@ html {
     background-size:cover
   }
   #logo{
-    width: 40%;
-    margin: 0;
+    width: 75%;
+    height: 25%;
     position: absolute;
     top: 45%;
     left: 50%;
